[Feature] Add Feature to enable user to transfer money
