# swagger-template/swagger.json
@@ -93,6 +93,34 @@
         },
         "x-swagger-router-controller": "manager.swagger_server.controllers.config_controller"
       }
+    },
+    "/wallet": {
+      "post": {
+        "tags": [
+          "payment"
+        ],
+        "summary": "create a wallet for a user",
+        "operationId": "create_wallet",
+        "parameters": [
+          {
+            "name": "body",
+            "required": true,
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/apiWalletInfo"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiStatus"
+            }
+          }
+        },
+        "x-swagger-router-controller": "manager.swagger_server.controllers.config_controller"
+      }
     }
   },
   "definitions": {
@@ -180,6 +208,10 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "integer",
+          "x-nullable": true
+        },
+        "userID": {
           "type": "integer"
         },
         "balance": {
